// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseCard Renders default (vertical) non-interactive card 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  overflow: hidden;
  border-radius: 4px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
}

.emotion-1 {
  box-sizing: border-box;
}

.emotion-2 {
  box-sizing: border-box;
  padding-inline: 4px;
  padding-block: 8px;
}

.emotion-2 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-3 {
  margin-bottom: 20px;
}

.emotion-4 {
  font-family: Poppins,sans-serif;
  font-size: 1.25rem;
  line-height: 1.40625rem;
  font-weight: 700;
  letter-spacing: 0em;
  padding: 0.5px 0px;
}

.emotion-4::before {
  content: '';
  margin-bottom: -0.2035em;
  display: block;
}

.emotion-4::after {
  content: '';
  margin-top: -0.2215em;
  display: block;
}

.emotion-5 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111c;
}

.emotion-5 svg {
  fill: #09111c;
}

.emotion-6 {
  margin: 0;
  color: #2e3f54;
  font-family: DM Sans,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  letter-spacing: 0em;
  padding: 0.5px 0px;
}

.emotion-6 svg {
  fill: #2e3f54;
}

.emotion-6::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-6::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <section
            class="nk-card-headline emotion-4"
          >
            <h3
              class="nk-headline-heading emotion-5"
            >
              Non-interactive Vertical Card
            </h3>
          </section>
        </div>
        <p
          class="emotion-6"
        >
          Text
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BaseCard Renders horizontal interactive card 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  overflow: hidden;
  border-style: solid;
  border-radius: 12px;
  border-width: 1px;
  border-color: #dee2e5;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: rowfalse;
  -ms-flex-direction: rowfalse;
  flex-direction: rowfalse;
  transition-property: box-shadow;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
}

.emotion-0:hover:not(:disabled) {
  box-shadow: 0px 8px 16px 0px #00000014;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-inline: 24px;
  padding-block: 24px;
}

.emotion-2 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-3 {
  margin-bottom: 20px;
}

.emotion-4 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
}

.emotion-4 .nk-headline-kicker {
  color: #3358cc;
}

.emotion-4:hover:not(:disabled) .nk-headline-kicker {
  color: #254cac;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:active:not(:disabled) .nk-headline-kicker {
  color: #14328d;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:visited:not(:disabled) .nk-headline-kicker {
  color: #6454e3;
}

.emotion-4 .nk-headline-heading {
  color: #09111c;
}

.emotion-4 .nk-headline-heading svg {
  fill: #09111c;
}

.emotion-4:focus-visible:not(:disabled) .nk-card-headline {
  outline-color: #3768fb;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-4:focus-visible:not(:disabled) .nk-card-headline {
      outline-style: auto;
    }
  }
}

.emotion-4:before {
  content: '';
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  z-index: 1;
}

.emotion-5 {
  font-family: Poppins,sans-serif;
  font-size: 1.25rem;
  line-height: 1.40625rem;
  font-weight: 700;
  letter-spacing: 0em;
  padding: 0.5px 0px;
}

.emotion-5::before {
  content: '';
  margin-bottom: -0.2035em;
  display: block;
}

.emotion-5::after {
  content: '';
  margin-top: -0.2215em;
  display: block;
}

.emotion-6 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111c;
}

.emotion-6 svg {
  fill: #09111c;
}

.emotion-7 {
  margin: 0;
  color: #2e3f54;
  font-family: DM Sans,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  letter-spacing: 0em;
  padding: 0.5px 0px;
}

.emotion-7 svg {
  fill: #2e3f54;
}

.emotion-7::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-7::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <a
            class="nk-card-link emotion-4"
            href="newskit.com"
          >
            <section
              class="nk-card-headline emotion-5"
            >
              <h3
                class="nk-headline-heading emotion-6"
              >
                Interactive Horizontal Card
              </h3>
            </section>
          </a>
        </div>
        <p
          class="emotion-7"
        >
          Text
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BaseCard Renders horizontal non-interactive card 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  overflow: hidden;
  border-radius: 4px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: rowfalse;
  -ms-flex-direction: rowfalse;
  flex-direction: rowfalse;
  transition-property: box-shadow;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-inline: 4px;
  padding-block: 8px;
}

.emotion-2 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-3 {
  margin-bottom: 20px;
}

.emotion-4 {
  font-family: Poppins,sans-serif;
  font-size: 1.25rem;
  line-height: 1.40625rem;
  font-weight: 700;
  letter-spacing: 0em;
  padding: 0.5px 0px;
}

.emotion-4::before {
  content: '';
  margin-bottom: -0.2035em;
  display: block;
}

.emotion-4::after {
  content: '';
  margin-top: -0.2215em;
  display: block;
}

.emotion-5 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111c;
}

.emotion-5 svg {
  fill: #09111c;
}

.emotion-6 {
  margin: 0;
  color: #2e3f54;
  font-family: DM Sans,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  letter-spacing: 0em;
  padding: 0.5px 0px;
}

.emotion-6 svg {
  fill: #2e3f54;
}

.emotion-6::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-6::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <section
            class="nk-card-headline emotion-4"
          >
            <h3
              class="nk-headline-heading emotion-5"
            >
              Non-interactive Horizontal Card
            </h3>
          </section>
        </div>
        <p
          class="emotion-6"
        >
          Text
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BaseCard Renders vertical interactive card 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  overflow: hidden;
  border-style: solid;
  border-radius: 12px;
  border-width: 1px;
  border-color: #dee2e5;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
}

.emotion-0:hover:not(:disabled) {
  box-shadow: 0px 8px 16px 0px #00000014;
}

.emotion-1 {
  box-sizing: border-box;
}

.emotion-2 {
  box-sizing: border-box;
  padding-inline: 24px;
  padding-block: 24px;
}

.emotion-2 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-3 {
  margin-bottom: 20px;
}

.emotion-4 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  outline: none;
}

.emotion-4 .nk-headline-kicker {
  color: #3358cc;
}

.emotion-4:hover:not(:disabled) .nk-headline-kicker {
  color: #254cac;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:active:not(:disabled) .nk-headline-kicker {
  color: #14328d;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:visited:not(:disabled) .nk-headline-kicker {
  color: #6454e3;
}

.emotion-4 .nk-headline-heading {
  color: #09111c;
}

.emotion-4 .nk-headline-heading svg {
  fill: #09111c;
}

.emotion-4:focus-visible:not(:disabled) .nk-card-headline {
  outline-color: #3768fb;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-4:focus-visible:not(:disabled) .nk-card-headline {
      outline-style: auto;
    }
  }
}

.emotion-4:before {
  content: '';
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  z-index: 1;
}

.emotion-5 {
  font-family: Poppins,sans-serif;
  font-size: 1.25rem;
  line-height: 1.40625rem;
  font-weight: 700;
  letter-spacing: 0em;
  padding: 0.5px 0px;
}

.emotion-5::before {
  content: '';
  margin-bottom: -0.2035em;
  display: block;
}

.emotion-5::after {
  content: '';
  margin-top: -0.2215em;
  display: block;
}

.emotion-6 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111c;
}

.emotion-6 svg {
  fill: #09111c;
}

.emotion-7 {
  margin: 0;
  color: #2e3f54;
  font-family: DM Sans,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  letter-spacing: 0em;
  padding: 0.5px 0px;
}

.emotion-7 svg {
  fill: #2e3f54;
}

.emotion-7::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-7::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <a
            class="nk-card-link emotion-4"
            href="newskit.com"
          >
            <section
              class="nk-card-headline emotion-5"
            >
              <h3
                class="nk-headline-heading emotion-6"
              >
                Interactive Horizontal Card
              </h3>
            </section>
          </a>
        </div>
        <p
          class="emotion-7"
        >
          Text
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
